# MP3-simulator

CMakeQuickStart/: CMakeLists.txt  main.cpp
CMakeQuickStart/Playlist/: playlist.json
CMakeQuickStart/src/: CMakeLists.txt  battery.hpp  json_handler.hpp  memory.hpp  player.cpp  player.hpp  playlist.cpp  playlist.hpp  song.cpp  song.hpp
CMakeQuickStart/test/: CMakeLists.txt  test_playlist.cpp  test_song.cpp
